<resources>
    <string name="app_name">My Pediatric</string>

    <string name="btnLog">Ingresa</string>
    <string name="btnRegister">Registrate</string>
    <string name="txtvMove">Desplaza hacia el centro\nla opcion a consultar</string>
    <string name="btnPediatras">Pediatras</string>

    <string name="txtUser">Usuario</string>
    <string name="txtPassword">Contraseña</string>
    <string name="chkRemember">Recordar mis datos</string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="labelPassForgot">¿Olvidaste tu contraseña?</string>

    <string name="labelRegisterTitle">Regístrate</string>
    <string name="txtDocument">Tipo de documento</string>
    <string name="txtNumDocument">Numero de documento</string>
    <string name="txtNameF">Nombres</string>
    <string name="txtNameL">Apellidos</string>
    <string name="txtChromosome23">GENERO:</string>
    <string name="rbMale">Masculino</string>
    <string name="rbFemale">Femenino</string>

    <string name="txtAdress">Dirección</string>
    <string name="txtemail">Correo elecronico</string>
    <string name="chkTandc">Acepto términos y condiciones</string>
    <string name="btnRegisterMe">Registrarme</string>
    <string name="btnRegisterKid">Registrar</string>

    <string name="labelPediatras">Directorio Pediatras</string>
    <string name="txtConsultP">Seleccione el pediatra que desea consultar</string>
    <string name="txtSearchP">Buscar pediatra</string>
    <string name="title_activity_pediatraslist">Pediatraslist</string>
    <string name="string_todo" />
    <string name="necesitas_ayuda_visita_nuestra_pagina_web">¿Necesitas ayuda? Visita nuestra pagina web:</string>
    <string name="title_activity_mainmaster">Mainmaster</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="txtBirthDate">Ingrese su fecha nacimiento</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>

//
    <string name="registro_kids">Registro niño/niña</string>
    <string name="nombres_kids">Nombres</string>
    <string name="ingrese_nombres_kids">Ingrese los nombres</string>
    <string name="apellidos_kids">Apellidos</string>
    <string name="ingrese_apellidos_kids">Ingrese los apellidos</string>
    <string name="selec_genero_kids">Seleccione el género</string>
    <string name="selec_edad_kids">Seleccione la edad</string>
    <string name="selec_rh_kids">Seleccione el RH</string>
    <string name="peso_kids">Peso</string>
    <string name="ingrese_peso_kids">Ingrese el peso</string>
    <string name="estatura_kids">Estatura</string>
    <string name="ingrese_estatura_kids">Ingrese la estatura</string>
    <string name="btnregistrarkid">Registrar</string>
    <string name="motivo_de_consulta">Motivo de Consulta</string>
    <string name="enviar">Enviar</string>
    <string name="actualmente_toma_algun_medicamento">Actualmente toma algún medicamento?</string>
    <string name="cuales_son_sus_sintomas">Cuales son sus Síntomas?</string>
    <string name="alergia_a_medicamento">Alergía a Medicamento?</string>
    <string name="se_le_ah_realizado_alguna_cirujia">Le han realizado algun tipo de cirugía?</string>
    <string name="si1">Si</string>
    <string name="no1">No</string>
    <string name="no2">No</string>
    <string name="no3">No</string>
    <string name="si2">Si</string>
    <string name="si3">Si</string>


</resources>
