<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".Registro">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:background="@drawable/boton_fijo"
        android:gravity="center"
        android:text="@string/labelRegisterTitle"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbarStyle="outsideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="132dp"
                android:layout_height="176dp"
                app:srcCompat="@drawable/logo" />

            <EditText
                android:id="@+id/txtDocType"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtDocument"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Seleccione su tipo de documento *"
                android:textSize="10sp"/>

            <EditText
                android:id="@+id/txtDocNum"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtNumDocument"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Ingrese su numero de Indentificación *"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/txtFPName"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtNameF"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Ingrese solo sus Nombres *"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtNameL"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Ingrese solo sus Apellidos *"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/txtBirth"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtBirthDate"
                android:inputType="date" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Ingrese Fecha de nacimiento *"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/txtChromosome23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:text="@string/txtChromosome23"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/radgChromosome23"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbMale" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rbFemale" />
            </RadioGroup>

            <EditText
                android:id="@+id/txtAdress"
                android:layout_width="324dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtAdress"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Ingrese dirección de domicilio"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtemail"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Ingrese dirección de email *"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="@string/txtPassword"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="311dp"
                android:layout_height="37dp"
                android:text="Ingrese cantraseña: Minimo 8 caracteres, una mayuscula y un simbolo (# . - + /)  *"
                android:textSize="10sp" />

            <EditText
                android:id="@+id/txtPass2"
                android:layout_width="324dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="Verificar contraseña"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="Confirme contraseña *"
                android:textSize="10sp" />

            <CheckBox
                android:id="@+id/chkTandc"
                android:layout_width="274dp"
                android:layout_height="wrap_content"
                android:text="@string/chkTandc" />

            <Button
                android:id="@+id/btnRegisterme"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo"
                android:onClick="Registrar"
                android:text="@string/btnRegisterMe"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="73dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/encaje" />

</android.support.constraint.ConstraintLayout>