<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image2View"
        android:layout_width="328dp"
        android:layout_height="275dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00000000"
        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bntLog"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/boton_redondo"
        android:onClick="Registro"
        android:text="@string/btnRegister"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bntLog"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/boton_redondo"
        android:onClick="Ingresar"
        android:text="@string/btnLog"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/btnRegister"
        app:layout_constraintTop_toTopOf="parent" />

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carusiel"
        android:layout_width="322dp"
        android:layout_height="240dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="8dp"
        android:baselineAligned="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085">


    </com.synnapps.carouselview.CarouselView>


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="60dp"
        android:layout_height="39dp"
        android:layout_marginBottom="16dp"
        android:onClick="Link1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/www"
        android:contentDescription="@string/string_todo" />

    <TextView
        android:id="@+id/pagina"
        android:layout_width="175dp"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/necesitas_ayuda_visita_nuestra_pagina_web"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.355"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>