<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vector_logo"
    tools:context=".Pediatras">

    <TextView
        android:id="@+id/labelPediatra"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/boton_redondo"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/labelPediatras"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/txtConsultP"
        android:layout_width="298dp"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txtConsultP"
        android:inputType="textPersonName"
        android:onClick="Proximo"
        android:textAllCaps="true"
        android:textIsSelectable="false"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPediatra" />

    <ImageButton
        android:id="@+id/btnFind"
        android:layout_width="32dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00000000"
        android:onClick="Proximo"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtConsultP"
        app:srcCompat="@drawable/search"
        tools:layout_editor_absoluteY="102dp" />

    <ImageButton
        android:id="@+id/btnimgSearchP"
        android:layout_width="232dp"
        android:layout_height="217dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#00000000"
        android:contentDescription="@string/txtSearchP"
        android:onClick="PediatrasSearch"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConsultP"
        app:srcCompat="@drawable/icopediat" />

    <TextView
        android:id="@+id/labelSearchP"
        android:layout_width="146dp"
        android:layout_height="21dp"
        android:gravity="center"
        android:text="@string/txtSearchP"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnimgSearchP"
        app:layout_constraintEnd_toEndOf="@+id/btnimgSearchP"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="@+id/btnimgSearchP"
        app:layout_constraintTop_toTopOf="@+id/btnimgSearchP"
        app:layout_constraintVertical_bias="0.918" />

</android.support.constraint.ConstraintLayout>